--- a/penn-housing-review/package.json
+++ b/penn-housing-review/package.json
@@ -8,15 +8,17 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "axios": "^1.3.4",
+    "axios-mock-adapter": "^1.21.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "test": "react-scripts test  --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
