--- a/penn-housing-review/.eslintrc.json
+++ b/penn-housing-review/.eslintrc.json
@@ -23,6 +23,7 @@
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], 
         "jsx-a11y/anchor-is-valid": 0, 
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-param-reassign": 0
     }
 }
