--- a/penn-housing-review/package.json
+++ b/penn-housing-review/package.json
@@ -16,6 +16,7 @@
     "axios-mock-adapter": "^1.21.2",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^7.1.0",
+    "prop-types": "^15.8.1",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
