--- a/penn-housing-review/.eslintrc.json
+++ b/penn-housing-review/.eslintrc.json
@@ -24,6 +24,7 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], 
         "jsx-a11y/anchor-is-valid": 0, 
         "react/prop-types": "off",
-        "no-param-reassign": 0
+        "no-param-reassign": 0, 
+        "no-underscore-dangle": "off"
     }
 }
