--- a/penn-housing-review/Backend/package.json
+++ b/penn-housing-review/Backend/package.json
@@ -12,5 +12,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "5.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
