--- a/penn-housing-review/Backend/package.json
+++ b/penn-housing-review/Backend/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "5.2"
+    "mongodb": "5.2",
+    "supertest": "^6.3.3"
   }
 }
