--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest --coverage --runInBand",
-    "build": "npm install && cd Frontend && npm install && npm run build"
+    "build": "npm install && cd Frontend && npm install && npm run build",
+    "start-frontend": "react-scripts start",
+    "build-frontend": "react-scripts build",
+    "test-frontend": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "eject-frontend": "react-scripts eject",
+    "format-frontend": "prettier-eslint --write \"{,!(node_modules)/**/}*.{js,jsx}\""
   },
   "repository": {
     "type": "git",
@@ -25,20 +30,39 @@
   },
   "homepage": "https://github.com/cis350/penn-housing-review#readme",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "axios-mock-adapter": "^1.21.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "mongodb": "^5.2.0",
     "path": "^0.12.7",
-    "supertest": "^6.3.3"
+    "prettier-eslint": "^15.0.1",
+    "prettier-eslint-cli": "^7.1.0",
+    "prop-types": "^15.8.1",
+    "rc-slider": "^10.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.9",
+    "supertest": "^6.3.3",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "eslint": "^8.39.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@testing-library/jest-dom": "^5.16"
   }
 }
