--- a/Frontend/.eslintrc.json
+++ b/Frontend/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true
     },
     "extends": [
-        "airbnb", 
+        //"airbnb", 
         "prettier"
     ],
     "overrides": [
