--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --env DISABLE_ESLINT_PLUGIN=true build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject",
     "format": "prettier-eslint --write \"{,!(node_modules)/**/}*.{js,jsx}\""
