--- a/Frontend/.eslintrc.json
+++ b/Frontend/.eslintrc.json
@@ -4,8 +4,8 @@
         "es2021": true
     },
     "extends": [
-        //"airbnb", 
-        //"prettier"
+        "airbnb", 
+        "prettier"
     ],
     "overrides": [
     ],
@@ -17,7 +17,7 @@
         }
     },
     "plugins": [
-      //  "prettier",
+        "prettier",
         "react"
     ],
     "rules": {
