--- a/.github/workflows/cis3500flow.yml
+++ b/.github/workflows/cis3500flow.yml
@@ -29,5 +29,6 @@ jobs:
       - run: npm install
       - run: npm test
       - run: npm run build --if-present
+      - run: npm run lint-backend
       #- run: npm run lint
       
