--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-frontend": "react-scripts build",
     "test-frontend": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject-frontend": "react-scripts eject",
-    "format-frontend": "prettier-eslint --write \"{,!(node_modules)/**/}*.{js,jsx}\""
+    "format-frontend": "prettier-eslint --write \"{,!(node_modules)/**/}*.{js,jsx}\"",
+    "lint-backend": "npx eslint server.js && npx eslint DbOperations.js"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.2",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.5.0",
@@ -64,9 +66,9 @@
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@testing-library/jest-dom": "^5.16",
+    "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint": "^8.40.0",
     "eslint-plugin-react": "^7.32.2"
   }
 }
